Fix the scrollbar bug at the registration page

--- a/src/app/pages/registration/registration.component.scss
+++ b/src/app/pages/registration/registration.component.scss
@@ -6,6 +6,8 @@
   height: 100%;
 
   padding-top: 10rem;
+
+  overflow-y: auto;
 }
 
 .registration-form {
