--- a/src/styles.scss
+++ b/src/styles.scss
@@ -184,6 +184,10 @@ textarea {
   border-color: var(--base-color);
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
 ::-webkit-scrollbar-track {
   background: #d5d5d5;
   border-radius: 20px;
